--- a/src/less/blocks/base.less
+++ b/src/less/blocks/base.less
@@ -19,6 +19,9 @@
 @font-face {
   .font(@OpenSans; '@{OpenSans}-Semibold');
 }
+@font-face {
+  .font(@Roboto; '@{Roboto}-Regular');
+}
 
 body {
   font-family: @fontRegular;
