--- a/src/blocks/banner.pug
+++ b/src/blocks/banner.pug
@@ -1,1 +1,10 @@
 section.banner
+    .banner__content
+        .banner__content_bg.banner__content_bg-grayDark
+        .banner__content_bg.banner__content_bg-grayLight
+        .banner__content-text
+            h1.page__title-h1 Mark (Marat) Bruk
+            p.page__text Follow me on my journey to One Billion Dollars
+    .banner__bg
+        .page__img
+            img(src="/assets/img/img-banner.png", alt="")
