--- a/src/index.pug
+++ b/src/index.pug
@@ -6,4 +6,8 @@ block content
 	include modules/header-module
 	main.page
 		include blocks/banner
+		include blocks/about
+		include blocks/contact
+		include blocks/projects
+	include blocks/footer
 block append script
