--- a/src/less/blocks/base.less
+++ b/src/less/blocks/base.less
@@ -20,7 +20,13 @@
   .font(@OpenSans; '@{OpenSans}-Semibold');
 }
 @font-face {
+  .font(@OpenSans; '@{OpenSans}-Bold');
+}
+@font-face {
   .font(@Roboto; '@{Roboto}-Regular');
+}
+@font-face {
+  .font(@Roboto; '@{Roboto}-Black');
 }
 
 body {
