--- a/src/less/blocks/main-block.less
+++ b/src/less/blocks/main-block.less
@@ -1,2 +1,10 @@
 @import 'base';
 @import 'debug';
+
+@import 'page';
+@import 'header';
+@import 'banner';
+@import 'about';
+@import 'contact';
+@import 'projects';
+@import 'footer';
