--- a/src/less/variables/variables.less
+++ b/src/less/variables/variables.less
@@ -8,6 +8,9 @@
 
 @color_lightGreen: #16E0D4;
 @color_blueDark:#2F3D4E;
+@color_grayLight: rgba(41, 41, 41, 0.7);
+@color_grayDark:#121212;
+@color_grayDark3:#383838;
 @color_blueDark3F:#3F5672;
 @color_blue:#38495F;
 @color_lightBlue:#95B3D6;
