--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -6,7 +6,8 @@ html(lang='ru')
         link(rel='icon', type="image/x-icon",  href='assets/img/favicon.ico')
         block base
         block title
-        block stylink(rel='stylesheet', href='css/styles.css', type='text/css')
+        block style
+            link(rel='stylesheet', href='css/styles.css', type='text/css')
     body
         block content
         block script
