--- a/src/blocks/banner.pug
+++ b/src/blocks/banner.pug
@@ -7,4 +7,4 @@ section.banner
             p.page__text Follow me on my journey to One Billion Dollars
     .banner__bg
         .page__img
-            img(src="/assets/img/img-banner.png", alt="")
+            img(src="assets/img/img-banner.png", alt="")
