--- a/src/less/blocks/about.less
+++ b/src/less/blocks/about.less
@@ -65,8 +65,11 @@
         }
         .page__text{
             color: @color_grayDark3;
-            font-size: 24px;
-            line-height: 33px;
+            // font-size: 24px;
+            // line-height: 33px;
+            font-size: 1.3vw;
+            line-height: 135%;
+     
             margin-bottom: 4%;
             // font-size: 14px;
             // font-size: 0.8vw;
