--- a/src/less/blocks/footer.less
+++ b/src/less/blocks/footer.less
@@ -10,7 +10,8 @@
         color: @color_white;
         font-weight: normal;
         font-weight: bold;
-        font-size: 18px;
+        // font-size: 18px;
+        font-size: 1vw;
         line-height: 148.9%;
         letter-spacing: -0.01em;
     }
