--- a/src/less/blocks/page.less
+++ b/src/less/blocks/page.less
@@ -5,8 +5,8 @@
             font-style: normal;
             // font-size: 75px;
             font-weight: 900;
-            font-size: 70px;
-            // font-size: 4vw;
+            // font-size: 70px;
+            font-size: 3.6vw;
             line-height: 121.18%; // 91px or 9vh;
             letter-spacing: -0.025em;
 
@@ -17,7 +17,8 @@
             font-weight: bold;
             // font-size: 144px;
             // font-size: 7.5vw;
-            font-size: 96px;
+            // font-size: 96px;
+            font-size: 5vw;
             line-height: 121.18%;
            
             /* identical to box height, or 175px */
@@ -37,7 +38,8 @@
             // letter-spacing: 1.5px;
             letter-spacing: -0.005em;
             font-weight: 900;
-            font-size: 48px;
+            // font-size: 48px;
+            font-size: 2.5vw;
             line-height: 121.18%;
             /* or 58px */
 
@@ -63,7 +65,8 @@
         // line-height: 44px;
         // font-size: 1.7vw;
         // line-height: 136%;
-        font-size: 36px;
+        // font-size: 36px;
+        font-size: 1.9vw;
         line-height: 148.9%;
         /* or 54px */
 
@@ -145,7 +148,8 @@
         color: @color_white;
         background:@color_grayDark;
         font-weight: bold;
-        font-size: 24px;
+        // font-size: 24px;
+        font-size: 1.2vw;
         line-height: 148.9%;
         &:active{
             background-color:@color_grayDark3;
