--- a/src/less/smartgrid/smart-grid.less
+++ b/src/less/smartgrid/smart-grid.less
@@ -1,18 +1,21 @@
 @columns: 12;
 @atom: (100% / @columns);
 
+@break_mmd: 1440px;
 @break_md: 920px;
 @break_sm: 720px;
 @break_xs: 576px;
 @break_xxs: 420px;
 
 @offset: 0px;
+@offset_mmd: @offset;
 @offset_md: @offset;
 @offset_sm: @offset;
 @offset_xs: @offset;
 @offset_xxs: @offset;
 
 @offset_one_side: (@offset / 2);
+@offset_mmd_one_side: (@offset_mmd / 2);
 @offset_md_one_side: (@offset_md / 2);
 @offset_sm_one_side: (@offset_sm / 2);
 @offset_xs_one_side: (@offset_xs / 2);
@@ -87,6 +90,11 @@
     width: ~"calc(@{val} - @{offset})";
 }
 
+.size-mmd(@n){
+    @val: 100% / @columns * @n;
+    .mmd(width, ~"calc(@{val} - @{offset_mmd})");
+}
+
 .size-md(@n){
     @val: 100% / @columns * @n;
     .md(width, ~"calc(@{val} - @{offset_md})");
@@ -137,6 +145,38 @@
 .shift-padding-right(@n){
     @val: 100% / @columns * @n;
     padding-right: ~"calc(@{val} + @{offset_one_side})";
+}
+
+.shift-mmd(@n){
+    @val: 100% / @columns * @n;
+    .mmd(margin-left, ~"calc(@{val} + @{offset_mmd_one_side})");
+    .mmd(margin-right, ~"calc(@{val} + @{offset_mmd_one_side})");
+}
+
+.shift-mmd-left(@n){
+    @val: 100% / @columns * @n;
+    .mmd(margin-left, ~"calc(@{val} + @{offset_mmd_one_side})");
+}
+
+.shift-mmd-right(@n){
+    @val: 100% / @columns * @n;
+    .mmd(margin-right, ~"calc(@{val} + @{offset_mmd_one_side})");
+}
+
+.shift-mmd-padding(@n){
+    @val: 100% / @columns * @n;
+    .mmd(padding-left, ~"calc(@{val} + @{offset_mmd_one_side})");
+    .mmd(padding-right, ~"calc(@{val} + @{offset_mmd_one_side})");
+}
+
+.shift-mmd-padding-left(@n){
+    @val: 100% / @columns * @n;
+    .mmd(padding-left, ~"calc(@{val} + @{offset_mmd_one_side})");
+}
+
+.shift-mmd-padding-right(@n){
+    @val: 100% / @columns * @n;
+    .mmd(padding-right, ~"calc(@{val} + @{offset_mmd_one_side})");
 }
 
 .shift-md(@n){
@@ -265,6 +305,18 @@
 .shift-xxs-padding-right(@n){
     @val: 100% / @columns * @n;
     .xxs(padding-right, ~"calc(@{val} + @{offset_xxs_one_side})");
+}
+
+.mmd(@name, @value){
+    @media screen and (max-width: @break_mmd){
+        @{name}: @value;
+    }
+}
+
+.mmd-block(@content){
+    @media screen and (max-width: @break_mmd){
+        @content();
+    }
 }
 
 .md(@name, @value){
