--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -8,10 +8,11 @@
     top: 8%;
     left: 10%;
     .header__title{
-        .size(5.9);
+        .size(6);
         font-family:'@{Roboto}-Black';
         font-weight: 900;
-        font-size: 38px;
+        // font-size: 38px;
+        font-size: 1.9vw;
         line-height: 121.18%;
         letter-spacing: -0.025em;
         position: relative;
@@ -28,20 +29,27 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 148px;
+        // width: 148px;
+        width: 42.5%;
         height: 148px;
+        .mmd-block({
+            height: 111px;
+        });
         .line{
             position: relative;
             left: 28%;
             display: flex;
             flex-direction: column;
-            width: 56.24px;
-            height: 9.37px;
+            // width: 56.24px;
+            width: 38%;
+            // height: 9.37px;
+            height: 6.5%;
             border-radius: 4px;
             margin-bottom: 7.4px;
             background-color:@color_white;
             &:nth-child(2n){
-                width: 69.56px;
+                // width: 69.56px;
+                width: 47%;
             }
         }
     }
