--- a/src/less/blocks/projects.less
+++ b/src/less/blocks/projects.less
@@ -34,6 +34,11 @@
             &:nth-child(4){
                 .size(6);
                 // padding: 9% 24%;
+                .page__img-bg{
+                    img{
+                        transform: scale(1.05);
+                    }
+                }
                 .projects-items__item{
                     &-content{
                         padding: 9% 24%;
@@ -91,7 +96,8 @@
                         font-weight: 600;
                         // font-size: 75px;
                         // line-height: 74px;
-                        font-size: 64px;
+                        // font-size: 64px;
+                        font-size: 3.3vw;
                         line-height: 100%;
                         // font-size: 4vw;
                         letter-spacing: -0.025em;
@@ -121,11 +127,11 @@
                             text-transform: inherit;
                             font-family: @fontRegular;
                             // font-size: 42px;
-                            font-size: 2.2vw;
                             line-height: 121.18%;
                             letter-spacing: 1.5px;
                             font-weight: bold;
-                            font-size: 42px;
+                            // font-size: 42px;
+                            font-size: 2.2vw;
                             line-height: 121.18%;
                             
                             
@@ -168,6 +174,7 @@
                     font-family: @fontRegular;
                     color: @color_white;
                     margin-bottom: 16px;
+                    font-size: 2.1vw;
                     transform: translateY(60px);
                     transition: all 0.5s ease-out;
                 }
