--- a/src/less/smartgrid/smart-grid-per.less
+++ b/src/less/smartgrid/smart-grid-per.less
@@ -1,18 +1,21 @@
 @columns: 12;
 @atom: (100% / @columns);
 
+@break_mmd: 1440px;
 @break_md: 920px;
 @break_sm: 720px;
 @break_xs: 576px;
 @break_xxs: 420px;
 
 @offset: 3.1%;
+@offset_mmd: @offset;
 @offset_md: @offset;
 @offset_sm: @offset;
 @offset_xs: @offset;
 @offset_xxs: @offset;
 
 @offset_one_side: (@offset / 2);
+@offset_mmd_one_side: (@offset_mmd / 2);
 @offset_md_one_side: (@offset_md / 2);
 @offset_sm_one_side: (@offset_sm / 2);
 @offset_xs_one_side: (@offset_xs / 2);
@@ -86,6 +89,10 @@
     width: @atom * @n - @offset;
 }
 
+.size-mmd(@n){
+    .mmd(width, @atom * @n - @offset_mmd);
+}
+
 .size-md(@n){
     .md(width, @atom * @n - @offset_md);
 }
@@ -126,6 +133,32 @@
 
 .shift-padding-right(@n){
     padding-right: @atom * @n + @offset_one_side;
+}
+
+.shift-mmd(@n){
+    .mmd(margin-left, @atom * @n + @offset_mmd_one_side);
+    .mmd(margin-right, @atom * @n + @offset_mmd_one_side);
+}
+
+.shift-mmd-left(@n){
+    .mmd(margin-left, @atom * @n + @offset_mmd_one_side);
+}
+
+.shift-mmd-right(@n){
+    .mmd(margin-right, @atom * @n + @offset_mmd_one_side);
+}
+
+.shift-mmd-padding(@n){
+    .mmd(padding-left, @atom * @n + @offset_mmd_one_side);
+    .mmd(padding-right, @atom * @n + @offset_mmd_one_side);
+}
+
+.shift-mmd-padding-left(@n){
+    .mmd(padding-left, @atom * @n + @offset_mmd_one_side);
+}
+
+.shift-mmd-padding-right(@n){
+    .mmd(padding-right, @atom * @n + @offset_mmd_one_side);
 }
 
 .shift-md(@n){
@@ -230,6 +263,18 @@
 
 .shift-xxs-padding-right(@n){
     .xxs(padding-right, @atom * @n + @offset_xxs_one_side);
+}
+
+.mmd(@name, @value){
+    @media screen and (max-width: @break_mmd){
+        @{name}: @value;
+    }
+}
+
+.mmd-block(@content){
+    @media screen and (max-width: @break_mmd){
+        @content();
+    }
 }
 
 .md(@name, @value){
